@@ -1,0 +1,9 @@
+# dftoolbox configuration file
+
+# When set to 1 output will no longer go to standard out, but to a
+use_stdout     0
+
+# Enter your Dreamfall directory here
+dreamfall_path "C:/Program Files/Dreamfall/"
+
+$
